fixed membership star based on screen view size / adjusted spacing between button and phone number on cards / fixed button size on grid view / attempt at fixing / fixed footer based on screen size

--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -57,6 +57,14 @@
     text-align: center;
 }
 
+.contact a{
+        min-width: 250px;
+        max-width: 280px;
+}
+
+.contact{
+    line-height: 2;
+}
 
 /* grid view */
 
@@ -158,13 +166,9 @@
     
 }
 
-.directory-list .contact{
-    line-height: 2;
-}
 
-.directory-list .contact a{
-        width: 250px;
-    }
+
+
 
 
 
