--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -16,6 +16,11 @@
 	box-sizing: border-box;
 }
 
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 body{
     font-family: var(--font-roboto);
     font-weight: var(--font-weight);
